kubernetes/cluster/privacy/linkwarden/linkwarden.yaml
# Service: Linkwarden
# Ingress: bookmarks.brhd.io
# Label: app.kubernetes.io/name: linkwarden
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: privacy
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: linkwarden
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: privacy
  labels:
    app.kubernetes.io/name: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkwarden
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: privacy
      labels:
        app.kubernetes.io/name: linkwarden
    spec:
      restartPolicy: Always
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.8.4
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 2Gi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/assets
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data
