kubernetes/cluster/privacy/linkwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: privacy
  labels:
    app.kubernetes.io/name: linkwarden
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: bookmarks.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: linkwarden
                port:
                  number: 80
  tls:
    - hosts:
        - bookmarks.brhd.io
